--- a/custom_attention.ipynb
+++ b/custom_attention.ipynb
@@ -67,8 +67,8 @@
     "#y_train_cat = to_categorical(y_train,num_classes=3)\n",
     "x_test=filetest[testkeys[1]]\n",
     "y_test=filetest[testkeys[2]]\n",
-    "y_test_cat=to_categorical(y_test,num_classes=3)\n"
-    "#test\n"
+    "y_test_cat=to_categorical(y_test,num_classes=3)\n",
+    "\n"
    ]
   },
   {
